# NaiveGL

./: .gitignore  LICENSE  NaiveGL.sln  README.md
include/: nagl.h
src/: Android.mk  CMakeLists.txt  NaiveGL.vcxproj  NaiveGL.vcxproj.filters  dllmain.cpp  gl_begin.cpp  gl_clip.cpp  gl_display_lists.cpp  gl_evaluators.cpp  gl_export.cpp  gl_exports.h  gl_feedback.cpp  gl_framebuffer.cpp  gl_funcs_x.h  gl_lighting.cpp  gl_matrix_stack.cpp  gl_pixels.cpp  gl_pixels.h  gl_rasterization.cpp  gl_selection.cpp  gl_state.cpp  gl_state.h  gl_state_requests.cpp  gl_texgen.cpp  gl_texture.cpp  gl_types.h  gl_vertex_arrays.cpp  gl_viewport.cpp  opengl32.def  pch.h
src/headless/: context.cpp
src/win/: dllmain.cpp  opengl32.def  opengl32_110.def  wgl_context.cpp
